--- a/app/templates/orders/modals/orders_update_modal.html
+++ b/app/templates/orders/modals/orders_update_modal.html
@@ -279,7 +279,7 @@
                                class="btn btn-outline-secondary"
                                id="nav-shipment-btn"
                                href="#">
-                               Go To Shipment
+                               Shipment &nbsp;<i class="bi bi-arrow-up-right"></i>
                             </a>
 
                             <!-- Invoice page of associated order -->
@@ -287,7 +287,7 @@
                                class="btn btn-outline-secondary"
                                id="nav-invoice-btn"
                                href="#">
-                               Go To Invoice
+                               Invoice &nbsp;<i class="bi bi-arrow-up-right"></i>
                             </a>
                         </div>
 
