--- a/app/templates/shipments/modals/shipment_update_modal.html
+++ b/app/templates/shipments/modals/shipment_update_modal.html
@@ -182,7 +182,7 @@
                         class="btn btn-outline-secondary"
                         id="nav-order-btn"
                         href="#">
-                        Go To Order
+                        Order &nbsp;<i class="bi bi-arrow-up-right"></i>
                     </a>
                 </div>
             </div>
