--- a/app/templates/tickets/tickets.html
+++ b/app/templates/tickets/tickets.html
@@ -21,20 +21,40 @@
 
         <!-- Main content -->
         <main class="ms-sm-auto px-md-4 pt-md-3">
-            <!-- inline container for title and modal button -->
-            <div class="d-flex justify-content-between border-bottom ">
-                <h1>Ticket History</h1>
-                <div>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tickets-add-modal">Create New Ticket</button>
-                    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#tickets-summary-modal" >Ticket Summary</button>
+
+
+            <!-- Title and header btns -->
+            {% set ticket_popover %}
+                {{ macros.info_popover("Trouble Tickets", "View all trouble ticket information.") }}
+            {% endset %}
+
+            {% set header_btns %}
+                <div class="btn-group">
+                    <button 
+                        type="button" 
+                        class="btn btn-primary" 
+                        data-bs-toggle="modal" 
+                        data-bs-target="#tickets-add-modal">
+                        + New Ticket
+                    </button>
+                    <button 
+                        type="button" 
+                        class="btn btn-secondary" 
+                        data-bs-toggle="modal" 
+                        data-bs-target="#tickets-summary-modal">
+                        <i class="bi bi-file-bar-graph"></i>&nbsp;&nbsp;
+                        Summary
+                    </button>
                 </div>
-            </div>
+            {% endset %}
+
+            {{ macros.section_header("Trouble Tickets", extra_html=header_btns | safe, popover=ticket_popover | safe) }}
 
             <!-- Query Search Bar-->
-            <div class="query-container mt-4">
+            <div class="query-container mb-4">
 
                 <!-- Query Search Form -->
-                <form method="GET" action="{{ url_for('tickets.tickets_query_tickets') }}" class="row g-3">
+                <form method="GET" action="{{ url_for('tickets.tickets_query_tickets') }}" class="row g-3 mt-4">
 
                     <div class="row mb-3">
 
@@ -140,7 +160,11 @@
                 
                         <!-- Submit Button -->
                         <div class="col-md-2">
-                            <button type="submit" class="btn btn-primary w-100">Search</button>
+                            <button 
+                                type="submit" 
+                                class="btn btn-primary w-75 h-100">
+                                <i class="bi bi-search"></i>&nbsp;&nbsp;Search
+                            </button>
                         </div>
 
                     </div>
@@ -178,9 +202,9 @@
                                 <td>
                                     <!-- Only surface update ticket button if the current user is an admin -->
                                     {% if current_user.is_admin %}
-                                        <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" 
+                                        <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" 
                                         data-bs-target="#tickets-update-modal" ticket-id={{ticket['id']}}>
-                                                Update Ticket
+                                            <i class="bi bi-pencil-square"></i>
                                         </button>
                                         <!-- Hiding this delete button for now 
                                         <form method="POST" action="{{ url_for('tickets.tickets_delete_ticket') }}">
