Created report problem button at the bottom of orders, inventory, and shipment
Report problem is an overlayed button that opens the add ticket modal, and on submission it redirects to the tickets page. In the future, I would like to have it not redirect to the tickets page but this requires some extensive refactoring

--- a/app/templates/orders/orders.html
+++ b/app/templates/orders/orders.html
@@ -19,6 +19,9 @@
         <!-- Offcanvas sidebar -->
         {% include 'components/navbar.html' %}
 
+        <!-- Bottom Report Problem Button -->
+        {% include 'components/report_ticket_button.html' %}
+
         <!-- Main content -->
         <main class="ms-sm-auto px-md-4 pt-md-3">
 
