--- a/app/templates/shipments/shipments.html
+++ b/app/templates/shipments/shipments.html
@@ -11,6 +11,9 @@
 
     {% include 'shipments/modals/shipment_update_modal.html' %}
 
+    <!-- Bottom Report Problem Button -->
+    {% include 'components/report_ticket_button.html' %}
+
     <div class="container-md">  
         
         {% set status_report_btn %}
