--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,26 @@
 
     </main>
 
+    <!-- Jinja vars to pass to base.js -->
+    <script>
+        // var autoSignoffInterval = parseInt("{{ auto_signoff_interval }}");
+        // var logoutUrl = "{{ url_for('auth.logout') }}";
+        // console.log(autoSignoffInterval, logoutUrl);
+
+        // function resetTimeout() {   // reset the timeout
+        //     clearTimeout(autoSignoffInterval);
+        //     signOffTimeout = setTimeout(logout, autoSignoffInterval * 60 * 1000);
+        // }
+        // function logout() {  // logout the user
+        //     window.location.href = logoutUrl;
+        // }
+        // document.addEventListener('mousemove', resetTimeout);    // reset timeout on user interactions
+        // document.addEventListener('keypress', resetTimeout);
+        // document.addEventListener('click', resetTimeout);
+        // document.addEventListener('scroll', resetTimeout);
+        // resetTimeout();    // init the timeout
+    </script>
+
     <!-- Footer -->
     <footer class="d-print-none">
         <p>&copy; 2024 Ice Track</p>
