--- a/app/templates/tickets/modals/tickets_update_modal.html
+++ b/app/templates/tickets/modals/tickets_update_modal.html
@@ -32,6 +32,7 @@
                                 id='date-resolved',
                                 name='date-resolved',
                                 type='date',
+                                is_required=False,
                                 tooltip='Enter the date the problem was resolved.',
                             ) }}
                         </div>
@@ -64,8 +65,6 @@
                         </div>
 
                     </div>
-
-
 
                     <!-- Modal Footer -->
                     <div class="modal-footer d-flex justify-content-between align-items-center">
